; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/chelsio/cxgb4/extr_smt.c_t4_smte_free.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/chelsio/cxgb4/extr_smt.c_t4_smte_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.smt_entry = type { i64, i32 }

@SMT_STATE_UNUSED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.smt_entry*)* @t4_smte_free to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @t4_smte_free(%struct.smt_entry* %0) #0 {
  %2 = alloca %struct.smt_entry*, align 8
  store %struct.smt_entry* %0, %struct.smt_entry** %2, align 8
  %3 = load %struct.smt_entry*, %struct.smt_entry** %2, align 8
  %4 = getelementptr inbounds %struct.smt_entry, %struct.smt_entry* %3, i32 0, i32 0
  %5 = load i64, i64* %4, align 8
  %6 = icmp eq i64 %5, 0
  br i1 %6, label %7, label %11

7:                                                ; preds = %1
  %8 = load i32, i32* @SMT_STATE_UNUSED, align 4
  %9 = load %struct.smt_entry*, %struct.smt_entry** %2, align 8
  %10 = getelementptr inbounds %struct.smt_entry, %struct.smt_entry* %9, i32 0, i32 1
  store i32 %8, i32* %10, align 8
  br label %11

11:                                               ; preds = %7, %1
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
